# rag-student-handbook

./: .env.example  .gitignore  docker-compose.yml  main.py
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0148268d651c_init_auth_and_chat_db.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  chat.py  examinations.py  ingest.py  patients.py
backend/app/core/: config.py  graph_store.py  vector_store.py
backend/app/core/api/: routes.py  schemas.py
backend/app/db/: neo4j_client.py  postgres.py
backend/app/db/models/: __init__.py  examinations.py  patients.py
backend/app/rag/: embeddings.py  qdrant_client.py  retriever.py
backend/app/schemas/: __init__.py  examinations.py  patients.py
backend/app/services/: __init__.py  chat_service.py  ingestion_service.py
backend/src/agents/: base_agent.py  handbook_agent.py
backend/src/api/: main.py
backend/src/api/routes/: auth.py  chat.py  health.py  ingest.py
backend/src/core/: config.py  exceptions.py
backend/src/knowledge/: document_loader.py  handbook_rag_pipeline.py  text_splitter.py
backend/src/memory/: embeddings.py  graph_store.py  vector_store.py
backend/src/models/: llm_factory.py
backend/src/orchestration/: handbook_orchestrator.py  state_manager.py
backend/src/tools/: base_tool.py  handbook_search_tool.py
backend/src/utils/: auth_utils.py
backend/tests/: conftest.py
backend/tests/test_api/: test_chat.py  test_health.py
backend/tests/test_orchestration/: test_handbook_orchestrator.py
(+37 files in other folders)
